fix overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,17 +70,16 @@ body {
     top: 0;
     left: 0;
     width: 80%;
+    overflow: visible;
 
     &.back {
         max-width: 1700px;
-        min-width: 1100px;
     }
 
     &.front {
         left: 12%;
         mix-blend-mode: difference;
         max-width: 1500px;
-        min-width: 900px;
     }
 }
 
